--- a/views/babbage.html
+++ b/views/babbage.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <img src="/img/licensed-image.jpg" width="320px" alt="">
-        <p>Charles Babbage fue un matemático y científico de la computación británico.​ Diseñó y desarrolló una calculadora mecánica capaz de calcular tablas de funciones numéricas por el método de diferencias.</p></p>
+        <p>Charles Babbage fue un matemático y científico de la computación británico.​ Diseñó y desarrolló una calculadora mecánica capaz de calcular tablas de funciones numéricas por el método de diferencias.</p>
     </main>
 </body>
 </html>
