--- a/views/clarke.html
+++ b/views/clarke.html
@@ -10,6 +10,8 @@
     <header>
         <h1>Arthur C. Clarke</h1>
     </header>
-    <main><img src="/img/Clarke.jpg"  width="320px" alt=""></main>
+    <main><img src="/img/Clarke.jpg"  width="320px" alt="">
+    <p>Arthur Charles Clarke, más conocido como Arthur C. Clarke, fue un escritor y científico británico. Autor de obras de divulgación científica y de ciencia ficción, como la novela 2001: Una odisea del espacio, El centinela o Cita con Rama y coguionista de la película 2001: Una odisea del espacio.</p>
+    </main>
 </body>
 </html>
