--- a/views/hamilton.html
+++ b/views/hamilton.html
@@ -10,6 +10,8 @@
     <header>
         <h1>Hamilton Naki</h1>
     </header>
-    <main><img src="/img/Hamilton_Naki.jpg" alt=""></main>
+    <main><img src="/img/Hamilton_Naki.jpg" alt="">
+    <p>Hamilton Naki fue un médico cirujano y maestro sudafricano, sin ninguna formación académica, al que se ha reconocido por colaborar con el doctor Christiaan Barnard en las investigaciones que dieron origen al primer trasplante de corazón exitoso; se le ha atribuido además intervención en el proceso del trasplante</p>
+    </main>
 </body>
 </html>
