--- a/views/hopper.html
+++ b/views/hopper.html
@@ -10,6 +10,8 @@
     <header>
         <h1>Edward Hopper</h1>
     </header>
-    <main><img src="/img/1200px-Edward_Hopper,_New_York_artist_LCCN2016871478_(cropped).jpg" width="320px" alt=""></main>
+    <main><img src="/img/1200px-Edward_Hopper,_New_York_artist_LCCN2016871478_(cropped).jpg" width="320px" alt="">
+    <p>Edward Hopper ​ fue un pintor estadounidense, célebre sobre todo por sus retratos de la soledad en la vida estadounidense contemporánea. Se le considera uno de los pintores de la escuela Ashcan, que a través de Arshile Gorky llevó al expresionismo abstracto posterior a la Segunda Guerra Mundial.</p>
+    </main>
 </body>
 </html>
