--- a/views/lovelace.html
+++ b/views/lovelace.html
@@ -10,6 +10,8 @@
     <header>
         <h1>Ada Lovelace</h1>
     </header>
-    <main><img src="/img/Ada_Lovelace_portrait_circa_1840.jpg"  width="320px" alt=""></main>
+    <main><img src="/img/Ada_Lovelace_portrait_circa_1840.jpg"  width="320px" alt="">
+    <p>Augusta Ada King, condesa de Lovelace, estuvo registrada al nacer como Augusta Ada Byron y conocida habitualmente como Ada Lovelace, fue una matemática y escritora británica, célebre sobre todo por su trabajo acerca de la calculadora de uso general de Charles Babbage, la denominada máquina analítica. </p>
+    </main>
 </body>
 </html>
