--- a/views/turing.html
+++ b/views/turing.html
@@ -10,6 +10,8 @@
     <header>
         <h1>Alan Turing</h1>
     </header>
-    <main><img src="/img/Alan_Turing_Aged_16.jpg"  width="320px" alt=""></main>
+    <main><img src="/img/Alan_Turing_Aged_16.jpg"  width="320px" alt="">
+    <p>Alan Mathison Turing, fue un matemático, lógico, informático teórico, criptógrafo, filósofo, biólogo teórico, maratoniano y corredor de ultradistancia británico.​​​​​Es considerado uno de los padres de la ciencia de la computación y precursor de la informática moderna.</p>
+    </main>
 </body>
 </html>
