--- a/views/bernes-lee.html
+++ b/views/bernes-lee.html
@@ -10,6 +10,8 @@
     <header>
         <h1>Tim Berners-Lee</h1>
     </header>
-    <main><img src="/img/tim-berners-lee.jpeg.jpg" alt=""></main>
+    <main><img src="/img/tim-berners-lee.jpeg.jpg" alt="">
+     <p>Tim Berners-Lee, es un científico de la computación británico, conocido por ser el padre de la World Wide Web. Estableció la primera comunicación entre un cliente y un servidor usando el protocolo HTTP en diciembre de 1990</p>
+    </main>
 </body>
 </html>
